# dt-dataflow-plugin-default

./: CMakeLists.txt  vcpkg.json
asio/: CMakeLists.txt
asio/src/: plugin.cpp
asio/src/nodes/: io_ctx_node.cpp  io_ctx_node.hpp
base/: CMakeLists.txt
base/src/: plugin.cpp
base/src/nodes/: branch_node.cpp  branch_node.hpp  color_node.hpp  led_node.hpp  simple_cmp.cpp  simple_cmp.hpp  simple_op.hpp  simple_op_builder.hpp  simple_ops.hpp  simple_output_builder.hpp  simple_outputs.cpp  timer_node.cpp  timer_node.hpp
base/src/slots/: basic_slots.hpp  flow_slot.cpp  flow_slot.hpp
src/: plugin.cpp
src/nodes/: array_node.cpp  array_node.hpp  branch_node.cpp  branch_node.hpp  color_node.cpp  color_node.hpp  led_node.cpp  led_node.hpp  simple_cmp.cpp  simple_cmp.hpp  simple_cmp_builder.hpp  simple_cmps.cpp  simple_cmps.hpp  simple_op.cpp  simple_op.hpp  simple_op_builder.hpp  simple_ops.cpp  simple_output_builder.hpp  simple_outputs.cpp  simple_outputs.hpp  timer_node.cpp  timer_node.hpp
src/slots/: any_slot.cpp  any_slot.hpp  bool_slot.cpp  floating_slot.cpp  int_slot.cpp  number_slot.cpp  number_slot.hpp  span_slot.cpp  span_slot.hpp  span_slot_impl.cpp  span_slot_impl.hpp  trigger_slot.cpp
